# amirainvest_com

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  SPY-2022.csv  alembic.ini  conftest.py  database.Dockerfile  docker-compose.interactive.yaml  docker-compose.test.yaml  docker-compose.yaml  english_stopwords.txt  entrypoint.sh  free-market-rates.csv  local.env  mypy.ini  pyproject.toml  req.txt  setup.cfg  test_accounts.csv  test_holdings.csv  test_plaid_securities.csv  test_transactions.csv  wpoetry
.aws/: credentials
.github/: deploy.yml  test.yml  (+3 more)
src/backend_amirainvest_com/: entrypoint.sh  pyproject.toml
src/backend_amirainvest_com/lib/backend_amirainvest_com/: config.py  consts.py  gunicorn.conf.py  main.py
src/backend_amirainvest_com/lib/backend_amirainvest_com/api/: app.py  frontend_http_requests.py
src/backend_amirainvest_com/lib/backend_amirainvest_com/api/routers/: admin.py  application.py  bookmarks.py  broadcast_requests.py  code_challenge.py  feed.py  husk_requests.py  plaid.py  posts.py  search.py  user_subscriptions.py  users.py  webhooks.py
src/backend_amirainvest_com/lib/backend_amirainvest_com/api/webhooks/: app.py
src/backend_amirainvest_com/lib/backend_amirainvest_com/controllers/: __init__.py  application.py  auth.py  auth_new.py  bookmarks.py  broadcast_requests.py  code_challenge.py  creator.py  data_imports.py  feed.py  husk_requests.py  plaid.py  plaid_controller.py  posts.py  search.py  substack_users.py  twitter_users.py  uploads.py  user_media_errors.py  user_subscriptions.py  users.py  webhooks.py  youtubers.py
src/backend_amirainvest_com/lib/backend_amirainvest_com/models/: bookmark.py  creator.py  feed.py  husk_request.py  post.py  search.py  user.py  webhooks.py
src/backend_amirainvest_com/lib/backend_amirainvest_com/templates/: link.html
src/backend_amirainvest_com/lib/backend_amirainvest_com/tools/: clean_up_deletes.py  load_csv_users.py
src/backend_amirainvest_com/lib/backend_amirainvest_com/utils/: auth0_utils.py  model.py  plaid.py  s3.py  s3_utils.py
src/backend_amirainvest_com/test/client/: bookmarks.py  feed.py  husk_requests.py  user_subscriptions.py  users.py
src/backend_amirainvest_com/test/integration/: conftest.py  test_auth.py
src/backend_amirainvest_com/test/integration/backend_amirainvest_com/api/: test_auth.py
src/backend_amirainvest_com/test/unit/: conftest.py
src/backend_amirainvest_com/test/unit/backend_amirainvest_com/api/: config.py
src/brokerage_amirainvest_com/: README.md  portfolio-endpoints.txt  pyproject.toml
src/brokerage_amirainvest_com/lib/brokerage_amirainvest_com/: auth.py  config.py  consts.py  dynamo.py  helper.py  jobs.py  mail.py  main.py  mocks.py  models.py  providers.py  repository.py
src/brokerage_amirainvest_com/lib/brokerage_amirainvest_com/brokerages/: brokerage_interface.py  holdings_history.py  interfaces.py  plaid_provider.py  robinhood_provider.py
src/brokerage_amirainvest_com/lib/brokerage_amirainvest_com/controllers/: posts.py
src/brokerage_amirainvest_com/lib/brokerage_amirainvest_com/helpers/: build_test.py  free_market_rates.py
src/brokerage_amirainvest_com/lib/brokerage_amirainvest_com/holding_history/: holdings_history.py
src/brokerage_amirainvest_com/lib/brokerage_amirainvest_com/lambdas/: Dockerfile  app.py  brokerage_job.py
src/brokerage_amirainvest_com/lib/brokerage_amirainvest_com/templates/: link.html
src/brokerage_amirainvest_com/lib/brokerage_amirainvest_com/transformers/: charles_schwab.py  e_trade.py  interactive_brokers.py  merrill_edge.py  robinhood.py  td_ameritrade.py  transform.py
src/common_amirainvest_com/: pyproject.toml
src/common_amirainvest_com/lib/common_amirainvest_com/controllers/: creator.py  creators.py  notifications.py  watchlist.py
src/common_amirainvest_com/lib/common_amirainvest_com/dynamo/: consts.py  models.py  utils.py
src/common_amirainvest_com/lib/common_amirainvest_com/iex/: client.py  exceptions.py  model.py
src/common_amirainvest_com/lib/common_amirainvest_com/models/: creator.py
src/common_amirainvest_com/lib/common_amirainvest_com/notifications/: utils.py
src/common_amirainvest_com/lib/common_amirainvest_com/s3/: client.py  consts.py  s3.py
src/common_amirainvest_com/lib/common_amirainvest_com/schemas/: schema.py
src/common_amirainvest_com/lib/common_amirainvest_com/sqs/: consts.py  models.py  utils.py
src/common_amirainvest_com/lib/common_amirainvest_com/utils/: async_utils.py  consts.py  database_utils.py  datetime_utils.py  decorators.py  fast_api_depends.py  generic_utils.py  load_secrets.py  logger.py  pydantic_utils.py  sqlalchemy_helpers.py
src/data_imports_amirainvest_com/: pyproject.toml
src/data_imports_amirainvest_com/lib/data_imports_amirainvest_com/: config.py  constants.py  consts.py  main.py
src/data_imports_amirainvest_com/lib/data_imports_amirainvest_com/controllers/: data_loader.py  posts.py  substack_articles.py  substack_users.py  tweets.py  twitter_users.py  users.py  youtube_videos.py  youtubers.py
src/data_imports_amirainvest_com/lib/data_imports_amirainvest_com/husk_accounts/: controller.py
src/data_imports_amirainvest_com/lib/data_imports_amirainvest_com/models/: data_load.py
src/data_imports_amirainvest_com/lib/data_imports_amirainvest_com/sqs/: data_load_consumer.py  data_load_producer.py  redis_feed_consumer.py  sqs_pydantic_models.py  sqs_utils.py
src/data_imports_amirainvest_com/lib/data_imports_amirainvest_com/utils/: generic_utils.py
src/market_data_amirainvest_com/: entrypoint.sh  pyproject.toml
src/market_data_amirainvest_com/lib/market_data_amirainvest_com/: iex.py  populate_securities.py  repository.py
src/market_data_amirainvest_com/lib/market_data_amirainvest_com/backfill_securities/: populate_historical_prices.py  populate_securities.py
src/market_data_amirainvest_com/lib/market_data_amirainvest_com/cmds/: populate_3_months.py  populate_by_range_cli.py  populate_from_s3.py  populate_securities.py
src/market_data_amirainvest_com/lib/market_data_amirainvest_com/models/: iex.py
(+342 files in other folders)
