[build-system]
requires = ["setuptools", "poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "amirainvest.com"
version = "0.1.0"
description = ""
authors = ["Peter Hoburg <peterHoburg@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
common_amirainvest_com = {path = "./src/common_amirainvest_com", develop = true}
backend_amirainvest_com = {path = "./src/backend_amirainvest_com", develop = true}

[tool.poetry.dev-dependencies]
alembic = "^1.7.5"
black = "^21.11b1"
boto3-stubs = {extras = ["all"], version = "^1.20.24"}
factory-boy = "^3.2.1"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.910"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-cov = "^3.0.0"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.27"}
types-redis = "^4.0.4"
types-toml = "^0.10.1"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    # "pydantic.mypy", Waiting for 1.9.0 to be released. https://pydantic-docs.helpmanual.io/mypy_plugin/#configuring-the-plugin
    ]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src/amirainvest_com_common:$MYPY_CONFIG_FILE_DIR/tests"
namespace_packages = false
#explicit_package_bases = true

[[tool.mypy.overrides]]
module="factory"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pytest",
]
#ignore_missing_imports = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
combine_as_imports = "True"
force_alphabetical_sort_within_sections = "True"
ensure_newline_before_comments = "True"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
lines_after_imports = 2

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=amirainvest_com_common --cov-report term --cov-report html"
testpaths = [
    "tests",
]
