# https://github.com/python-poetry/poetry/issues/34#issuecomment-997519115

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "amirainvest.com"
version = "0.1.0"
description = ""
authors = ["Peter Hoburg <peterHoburg@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

backend_amirainvest_com = {path = "./src/backend_amirainvest_com", develop = true}
brokerage_amirainvest_com = {path = "./src/brokerage_amirainvest_com", develop = true}
common_amirainvest_com = {path = "./src/common_amirainvest_com", develop = true}
data_imports_amirainvest_com = {path = "./src/data_imports_amirainvest_com", develop = true}
market_data_amirainvest_com = {path = "./src/market_data_amirainvest_com", develop = true}
pycryptodome = "^3.13.0"

[tool.poetry.dev-dependencies]
alembic = "^1.7.5"
black = "^21.11b1"
factory-boy = "^3.2.1"
flake8 = "^4.0.1"
httpx = "^0"
isort = "^5.10.1"
mypy = "*"
pre-commit = "^2.15.0"
psycopg2-binary = "^2.9.3"
pytest = "^6.2.5"
pytest-asyncio = "^0"
pytest-cov = "^3.0.0"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.27"}
types-redis = "^4.0.4"
types-requests = "^2.26.2"
types-toml = "^0"
types-setuptools = "^57.4.7"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
#
#[tool.mypy]
#plugins = [
#    "sqlalchemy.ext.mypy.plugin",
##    "pydantic.mypy", # Waiting for 1.9.0 to be released. https://pydantic-docs.helpmanual.io/mypy_plugin/#configuring-the-plugin
#    ]
#mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
#namespace_packages = false
##explicit_package_bases = true
#
#[[tool.mypy.overrides]]
#module="factory"
#ignore_missing_imports = true
#
#[[tool.mypy.overrides]]
#module = [
#    "pytest",
#]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
combine_as_imports = "True"
force_alphabetical_sort_within_sections = "True"
ensure_newline_before_comments = "True"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
lines_after_imports = 2

[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
--strict-markers
--cov=src/common_amirainvest_com/lib
--cov=src/backend_amirainvest_com/lib
--cov=src/brokerage_amirainvest_com/lib
--cov=src/data_imports_amirainvest_com/lib
--cov=src/market_data_amirainvest_com/lib
--cov-report term
--cov-report html
"""
testpaths = [
    "src/common_amirainvest_com/test",
    "src/backend_amirainvest_com/test",
    "src/brokerage_amirainvest_com/test",
    "src/data_imports_amirainvest_com/test",
    "src/market_data_amirainvest_com/test",
]
asyncio_mode = "auto"

markers = [
    "unit_test: Used to mark tests that do not use ANY outside resources",
    "integration_test: Used to mark tests that DO call outside resorces",
]
