[build-system]
# https://github.com/python-poetry/poetry/issues/34#issuecomment-997519115
requires = ["setuptools", "poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "backend_amirainvest_com"
version = "0.1.0"
description = ""
authors = ["Peter Hoburg <peterHoburg@users.noreply.github.com>"]
packages = [
    { include = "backend_amirainvest_com", from = "lib" }
]

[tool.poetry.dependencies]
python = "^3.9"
common_amirainvest_com = { path = "../common_amirainvest_com", develop = true }

asyncpg = "^0.25.0"
boto3 = "^1.20.20"
boto3-stubs = { extras = ["sqs"], version = "^1.20.24" }
pycryptodome = "^3.12.0"
PyJWT = "^2.3.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
redis = "^4.0.2"
requests = "^2.26.0"
sentry-sdk = "^1.5.0"
SQLAlchemy = "^1.4.27"
uvicorn = "^0.15.0"
cryptography = "^36.0.1"

[tool.poetry.dev-dependencies]

