[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "backend_amirainvest_com"
version = "0.1.0"
description = ""
authors = ["Peter Hoburg <peterHoburg@users.noreply.github.com>"]
packages = [
    { include = "backend_amirainvest_com", from = "lib" }
]

[tool.poetry.dependencies]
python = "^3.9"

common_amirainvest_com = { path = "../common_amirainvest_com", develop = true }

boto3 = "^1.20.20"
fastapi = "^0"
gunicorn = "^20.1.0"
httpx = "^0"
Jinja2 = "^3.0.3"
plaid-python = "^8.8.0"
pycryptodomex = "^3.13.0"
pydantic = "^1.8.2"
PyJWT = "^2.3.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0"
requests = "^2.26.0"
SQLAlchemy = "^1.4.27"
uvicorn = ">= 0.15 < 1"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]

