[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "brokerage_amirainvest_com"
version = "0.1.0"
description = ""
authors = ["Peter Hoburg <peterHoburg@users.noreply.github.com>"]
packages = [
    { include = "brokerage_amirainvest_com", from = "lib" }
]

[tool.poetry.dependencies]
python = "^3.9"
common_amirainvest_com = { path = "../common_amirainvest_com", develop = true }

alembic = "^1.7.5"
arrow = "^1.2.1"
asyncpg = ">= 0.25.0 < 1"
fastapi = ">= 0.70.0 < 1"
plaid-python = "^8.6.0"
pydantic = "^1.8.2"
sentry-sdk = "^1.5.0"
SQLAlchemy = "^1.4.27"
Jinja2 = "^3.0.3"
