[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "brokerage_amirainvest_com"
version = "0.1.0"
description = ""
authors = ["Peter Hoburg <peterHoburg@users.noreply.github.com>"]
packages = [
    { include = "brokerage_amirainvest_com", from = "lib" }
]

[tool.poetry.dependencies]
python = "^3.9"

common_amirainvest_com = { path = "../common_amirainvest_com", develop = true }

arrow = "^1.2.1"
boto3 = "^1.20.20"
plaid-python = "^8.6.0"
pydantic = "^1.8.2"
SQLAlchemy = "^1.4.27"
