[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "common_amirainvest_com"
version = "0.1.0"
description = ""
authors = ["Peter Hoburg <peterHoburg@users.noreply.github.com>"]
packages = [
    { include = "common_amirainvest_com", from = "lib" }
]

[tool.poetry.dependencies]
python = "^3.9"

arrow = "^1.2.1"
asyncpg = ">= 0.25.0 < 1"
boto3 = "^1.20.24"
boto3-stubs = { extras = ["sqs", "secretsmanager", "s3"], version = "^1.20.24" }
psycopg2-binary = "^2.9.2"
pydantic = "^1.8.2"
pydantic-sqlalchemy = ">= 0.0.9 < 1"
python-dotenv = ">= 0.19.2 < 1"
redis = "^4.0.2"
SQLAlchemy = "^1.4.27"

[tool.poetry.dev-dependencies]

