[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "data_imports_amirainvest_com"
version = "0.1.0"
description = ""
authors = ["Peter Hoburg <peterHoburg@users.noreply.github.com>"]
packages = [
    { include = "data_imports_amirainvest_com", from = "lib" }
]

[tool.poetry.dependencies]
python = "^3.9"
common_amirainvest_com = { path = "../common_amirainvest_com", develop = true }

asyncpg = "^0.25.0"
boto3 = "^1.20.19"
bs4 = "^0.0.1"
feedparser = "^6.0.8"
psycopg2-binary = "^2.9.2"
python-dateutil = "^2.8.2"
requests = "^2.26.0"
sentry-sdk = "^1.5.0"
SQLAlchemy = "^1.4.27"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

