[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "data_imports_amirainvest_com"
version = "0.1.0"
description = ""
authors = ["Peter Hoburg <peterHoburg@users.noreply.github.com>"]
packages = [
    { include = "data_imports_amirainvest_com", from = "lib" }
]

[tool.poetry.dependencies]
python = "^3.9"

common_amirainvest_com = { path = "../common_amirainvest_com", develop = true }

boto3 = "^1.20.19"
boto3-stubs = { extras = ["sqs"], version = "^1.20.24" }
bs4 = ">= 0.0.1 < 1"
feedparser = "^6.0.8"
requests = "^2.31.0"
SQLAlchemy = "^1.4.27"

[tool.poetry.dev-dependencies]

